@@ -41,13 +41,17 @@ Changes Since 0.16
   - Apply version of patch #167: Let document.set_id() register all
     existing IDs (thanks to Takeshi KOMIYA).
 
-* docutils/parsers/rst/directives/body.py:
+* docutils/parsers/rst/directives/body.py
 
   - Make the sidebar's "title" argument optional (feature request #69).
 
-* docutils/parsers/rst/directives/misc.py:
+* docutils/parsers/rst/directives/misc.py
 
   - Prevent infinite inclusion loops.
+
+* docutils/parsers/rst/roles.py
+
+  - Apply patch #174 Lowercase new role names on registration
 
 * docutils/utils/smartquotes.py
 
